[package]
name = "IronShell"
version = "0.1.0"
edition = "2021"
description = "A simple shell written in Rust"
license = "MIT"
repository = "https://github.com/Mobiance/IronShell"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
git2 = "0.18.3"
termcolor = "1.4.1"
